--- a/src/styles.css
+++ b/src/styles.css
@@ -31,13 +31,18 @@ body {
 }
 
 button {
-  margin: 0;
-  padding: 0;
-  border: none;
+  margin: 1;
+  padding: 1;
+  border: 2px white solid;
   background: transparent;
   cursor: pointer;
   text-align: left;
   color: inherit;
+}
+
+button:hover {
+  background: white;
+  color: black;
 }
 
 .wrapper {
@@ -167,7 +172,7 @@ h1 {
   right: 0;
   bottom: 0;
   width: 100%;
-  max-width: 600px;
+  max-width: 400px;
   margin: 0 auto;
   padding: 32px;
   text-align: center;
